data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_2032.wast
;; 3. **Test Name: Conditional `br_table` where No Default Case is Hit**    - **Description**: The `if` block contains a `br_table` with multiple targets but set up such that the computed index does not match any target effectively leading to a scenario without a default hit.    - **Constraint Checked**: How the engine handles `br_table` scenarios without matching indices.    - **Relation to Edge Case**: Tests the default branching logic and confirms the control flow is gracefully managed.

(assert_invalid
  (module
    (func $conditional-br_table (result i32)
      (i32.const 1)
      (if (result i32)
        (then
          (br_table 0 1 2
            (i32.const 4) ;; This index does not match any target in the br_table.
          )
          (i32.const 42)
        )
        (else
          (i32.const 0)
        )
      )
    )
  )
  "type mismatch"
)